# Modelos-Predictivos-IA-Notebooks

./: .gitignore  Agentes_IA_con_Python.ipynb  Conexión a SQL lite.ipynb  Datos del trafico de internet.ipynb  Modelo_Predictivo_de_la_Radiación_Solar.ipynb  Modelo_base_clasificador_de_Imágenes.ipynb  README.md
Agentes/: .env.example  .gitignore  README.md  enviroment.txt  langgraph.json  pyproject.toml
Agentes/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
Agentes/app/: agent.py  api.py
Eventos Astronomicos/: Astronomia.h5  Modelo_Pulsar.ipynb  model.json  prediccion_astronomia.keras  pulsar_data_test.csv  pulsar_data_train.csv
Modelos Kaggle/: Contradictory My Dear Watson - Kaggle Challenge.ipynb  Contradictory.csv  Real Prediction- Natural Language Processing with Dissaster Tweets.ipynb
tarjetas_credito/: Aprobación_de_Tarjetas_de_Crédito.ipynb
