[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "mariana-ruge",email = "mariana.ruge@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph (>=0.4.7,<0.5.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langgraph-cli[inmem] (>=0.2.10,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
